[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Sniper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprite/Main.gd" type="Script" id=3]
[ext_resource path="res://Scene/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Sniper" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="GetReadyTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 544 )

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="bullet_fired" from="Sniper" to="." method="_on_Sniper_bullet_fired"]
[connection signal="done_firing" from="Sniper" to="." method="_on_Sniper_done_firing"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="timeout" from="GetReadyTimer" to="." method="_on_GetReadyTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
